# cudf

./: .gitignore  CHANGELOG.md  build.sh
conda/environments/: cudf_dev_cuda11.0.yml  custreamz_dev_cuda10.1.yml  custreamz_dev_cuda10.2.yml
conda/recipes/cudf-kafka-datasource/: meta.yaml
conda/recipes/custreamz/: meta.yaml
cpp/: CMakeLists.txt
cpp/cmake/Modules/: ConfigureArrow.cmake  FindCUDF.cmake  FindCudf.cmake
cpp/cmake/Templates/: Arrow.CMakeLists.txt.cmake
cpp/cmake/Toolchains/: Xavier.cmake
cpp/include/: doxygen_groups.h
cpp/include/cudf/io/: readers.hpp
cpp/libcudf_kafka/: CMakeLists.txt
cpp/libcudf_kafka/include/cudf_kafka/: kafka_consumer.hpp  kafka_producer.hpp
cpp/libcudf_kafka/src/: kafka_producer.cpp
cpp/libcudf_kafka/tests/: kafka_consumer_tests.cpp  kafka_consumer_tests.h
cpp/libcudf_nifi/: CMakeLists.txt
cpp/libcudf_nifi/include/cudf_nifi/: nifi_site_to_site_client.hpp
cpp/libcudf_nifi/src/: nifi_site_to_site_client.cpp
cpp/libcudf_nifi/tests/: CMakeLists.txt  nifi_site_to_site_client_tests.cpp
cpp/libcudf_s3/: CMakeLists.txt
cpp/libcudf_s3/include/cudf_kafka/: s3_arrow_datasource.hpp
cpp/libcudf_s3/include/cudf_s3/: s3_arrow_datasource.hpp
cpp/libcudf_s3/src/: main.cpp  s3_arrow_datasource.cpp
cpp/src/io/: functions.cpp
cpp/src/io/csv/: reader_impl.cu  reader_impl.hpp
cpp/src/io/parquet/: reader_impl.cu
cpp/src/io/utilities/: datasource.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/io/: external_datasource_test.cpp
javacpp/: README.md  build.sh  pom.xml
javacpp/src/main/java/ai/rapids/cudf/presets/: Cudf.java  cudf.java  rmm.java  thrust.java
jetson/: README.md  jetson_build.sh
python/cudf/cudf/_lib/io/: datasink.pxd  datasink.pyx
python/cudf/cudf/io/: csv.py
python/cudf_kafka/cudf_kafka/_lib/: kafka.pxd  kafka.pyx
python/custreamz/: setup.py  test.py
python/custreamz/custreamz/: __init__.py  core.py  kafka.py
python/custreamz/custreamz/_lib/: io.cpp  kafka.cpp
python/custreamz/custreamz/_libxx/: kafka.cpp  kafka.pyx
python/custreamz/custreamz/io/: __init__.py  io.py  kafka.py
python/custreamz/examples/: kratos_pocm.py
python/custreamz/examples/01_sources/: kafka_source.py
